  -  Fixed a problem allowing Remote Code Inclusion under certain circumstances (BenBE)
  -  Changes to default CSS in order to make the GESHI_HEADER_PRE_TABLE align properly,
     even on Windows / Mac systems with strange fonts (milian, revulo, ^RT)
  -  Minor style changes to the following languages:
     * cpp-qt (milian)
     * PHP (BenBE)
  -  Improvements to language files (BenBE, milian)
     * Added MinSpareThread\MaxSpareThreads to Apache highlighter (BenBE)
     * Added new Keyword group for APT sources.list highlighter (BenBE)
     * Fixed highlighting in LaTeX for \begin{} and \end{}, i.e. the stuff inside
       the curly braces. (milian, thanks for the report go to Matthias Pospiech)
     * Improved String support for D (BenBE)
     * MySQL was seriously broken (BenBE)
Version 1.0.8
  -  Added language files
     * APT sources.list (milian)
     * Boo (Marcus Griep)
     * CIL (Common Intermediate Language, .NET Assembly) (Marcus Griep)
     * COBOL (Benny Baumann)
     * Gnuplot (milian)
     * KLoneC (Mickael Auger)
     * KLoneC++ (Mickael Auger)
     * PIC16xxx assembler (Phil Mattison)
     * POV-Ray (Carl Fürstenberg)
     * PowerShell (Frode Aarebrot)
     * Progress (Marco Aurelio de Pasqual)
     * TypoScript (Jan-Philipp Halle)
     * Xorg configuration (milian)
  -  Make GeSHi's constructor arguments optional, so something like `$foo = new GeSHi;` is possible. (milian)
  -  Added an optimizer for lists to regular expressions. Using these cached lists results in a speedup of approx. 50%.
     The slightly increased memory consumption (~150KB for PHP language file) is more than worth it! (milian)
  -  Some more memory & speed optimizations all over GeSHi (milian)
     * Reduced memory overhead when highlighting keywords (BenBE)
     * Keyword Linking now uses considerably less strtolower calls (milian)
     * Cache Symbol Search Regexp and make Symbol Highlighting faster (milian)